--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,6 +7,9 @@ on:
     branches: [ main ]
     types: [ closed ]
 
+permissions:
+  contents: write
+
 jobs:
   build-and-release:
     if: github.event_name == 'push' || (github.event.pull_request.merged == true)
